<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listView"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/list_view" />
        <item
            android:id="@+id/nav_mapView"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_view" />
    </group>


    <item android:title="@string/additional">
        <menu>
            <item
                android:id="@+id/nav_aboutApp"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_app" />
        </menu>

    </item>

</menu>