<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:contentDescription="@string/store_image"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textIsSelectable="false"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/store_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_desc"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>